src/test/deca/test_compilateur/syntax/valid/created/decl_class_protected.deca
// Description :
//		field protected, field public
//
// Resultats :
//		Ok


class B{
	protected type field3;
	type f;
}
