src/test/deca/test_compilateur/syntax/invalid/created/class/bad_visibility.deca
// Description :
//    decl class visibilité inconnue
//
// Resultats :
//		Syntaxe error

class A {
private int a;

}